--- a/requirements.txt
+++ b/requirements.txt
@@ -13,9 +13,11 @@ mypy==0.761
 mypy-extensions==0.4.3
 pycodestyle==2.5.0
 PyMySQL==0.9.3
+pywikiapi==4.2.0
 PyYAML==5.2
 redis==3.3.11
 requests==2.22.0
+responses==0.10.9
 six==1.13.0
 typed-ast==1.4.0
 typing-extensions==3.7.4.1
