--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,24 @@
-autopep8==1.4.4
 certifi==2019.11.28
 chardet==3.0.4
-Click==7.0
-Flask==1.1.1
-Flask-Cors==3.0.8
+click==8.0.3
+Flask==2.0.2
+Flask-Cors==3.0.10
 idna==2.8
-itsdangerous==1.1.0
-Jinja2==2.10.3
-MarkupSafe==1.1.1
-msgpack==0.6.2
-mypy==0.761
+itsdangerous==2.0.1
+Jinja2==3.0.2
+MarkupSafe==2.0.1
+msgpack==1.0.2
+mypy==0.910
 mypy-extensions==0.4.3
-pycodestyle==2.5.0
-PyMySQL==0.9.3
-pywikiapi==4.2.0
-PyYAML==5.2
-redis==3.3.11
+pkg_resources==0.0.0
+PyMySQL==1.0.2
+pywikiapi==4.3.0
+PyYAML==6.0
+redis==3.5.3
 requests==2.22.0
-responses==0.10.9
+responses==0.14.0
 six==1.13.0
-typed-ast==1.4.0
+toml==0.10.2
 typing-extensions==3.7.4.1
-urllib3==1.25.7
-Werkzeug==0.16.0
+urllib3==1.25.11
+Werkzeug==2.0.2
